--- a/UI/InterfaceGrid.ui
+++ b/UI/InterfaceGrid.ui
@@ -666,8 +666,8 @@ Parameters</string>
       <string notr="true">background-color: rgb(159, 159, 159);</string>
      </property>
      <property name="text">
-      <string>Dynamic
-Recharge</string>
+      <string>In Motion
+Charging</string>
      </property>
     </widget>
     <widget class="QPushButton" name="OportunityButton">
@@ -688,14 +688,14 @@ Recharge</string>
       </font>
      </property>
      <property name="statusTip">
-      <string>Push to go to the Oportunity Recharge tab</string>
+      <string>Push to go to the Oportunity Charging tab</string>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(159, 159, 159);</string>
      </property>
      <property name="text">
       <string>Oportunity
-Recharge</string>
+Charging</string>
      </property>
     </widget>
     <widget class="QPushButton" name="GridButton">
