--- a/UI/About.ui
+++ b/UI/About.ui
@@ -13,7 +13,7 @@
     <x>0</x>
     <y>0</y>
     <width>377</width>
-    <height>449</height>
+    <height>459</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -479,10 +479,10 @@
   <widget class="QLabel" name="AppIcon">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>20</x>
      <y>10</y>
-     <width>81</width>
-     <height>61</height>
+     <width>71</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="text">
@@ -499,7 +499,7 @@
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>10</y>
+     <y>20</y>
      <width>231</width>
      <height>131</height>
     </rect>
@@ -539,7 +539,7 @@ Barranquilla, Colombia</string>
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>110</y>
+     <y>120</y>
      <width>231</width>
      <height>16</height>
     </rect>
@@ -555,7 +555,7 @@ Barranquilla, Colombia</string>
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>150</y>
+     <y>160</y>
      <width>231</width>
      <height>281</height>
     </rect>
@@ -606,7 +606,7 @@ Mauricio Restrepo</string>
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>130</y>
+     <y>140</y>
      <width>231</width>
      <height>21</height>
     </rect>
@@ -635,6 +635,25 @@ Mauricio Restrepo</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignHCenter|Qt::AlignTop</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="UN_Logo">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>60</y>
+     <width>51</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>../Imgs/LogoUN-pEQUEÑO.png</pixmap>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
    </property>
   </widget>
  </widget>
