--- a/UI/InterfaceDynamic.ui
+++ b/UI/InterfaceDynamic.ui
@@ -667,7 +667,7 @@ Parameters</string>
 Charging</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="OportunityButton">
+    <widget class="QPushButton" name="OpportunityButton">
      <property name="geometry">
       <rect>
        <x>410</x>
@@ -685,13 +685,13 @@ Charging</string>
       </font>
      </property>
      <property name="statusTip">
-      <string>Push to go to the Oportunity Charging tab</string>
+      <string>Push to go to the Opportunity Charging tab</string>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(159, 159, 159);</string>
      </property>
      <property name="text">
-      <string>Oportunity
+      <string>Opportunity
 Charging</string>
      </property>
     </widget>
