--- a/UI/InterfaceOpportunity.ui
+++ b/UI/InterfaceOpportunity.ui
@@ -426,7 +426,7 @@
    </palette>
   </property>
   <property name="windowTitle">
-   <string>Electric Bus Recharging Analyzer - Oportunity Charging</string>
+   <string>Electric Bus Recharging Analyzer - Opportunity Charging</string>
   </property>
   <property name="windowIcon">
    <iconset>
@@ -670,7 +670,7 @@ Parameters</string>
 Charging</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="OportunityButton">
+    <widget class="QPushButton" name="OpportunityButton">
      <property name="enabled">
       <bool>false</bool>
      </property>
@@ -691,13 +691,13 @@ Charging</string>
       </font>
      </property>
      <property name="statusTip">
-      <string>Push to go to the Oportunity Charging tab</string>
+      <string>Push to go to the Opportunity Charging tab</string>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(159, 159, 159);</string>
      </property>
      <property name="text">
-      <string>Oportunity
+      <string>Opportunity
 Charging</string>
      </property>
     </widget>
@@ -733,7 +733,7 @@ Impact</string>
      </property>
     </widget>
    </widget>
-   <widget class="QTabWidget" name="SimulationOportunityTab">
+   <widget class="QTabWidget" name="SimulationOpportunityTab">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -759,11 +759,11 @@ gridline-color: rgb(0, 0, 0);</string>
     <property name="currentIndex">
      <number>0</number>
     </property>
-    <widget class="QWidget" name="ParametersOportunityTab">
+    <widget class="QWidget" name="ParametersOpportunityTab">
      <attribute name="title">
       <string>Parameters</string>
      </attribute>
-     <widget class="QLabel" name="FleetParameterLabel">
+     <widget class="QLabel" name="ChargingParameterLabel">
       <property name="geometry">
        <rect>
         <x>340</x>
@@ -784,13 +784,13 @@ gridline-color: rgb(0, 0, 0);</string>
        <string>Charging Parameters</string>
       </property>
      </widget>
-     <widget class="QTableWidget" name="FleetParametersTable">
+     <widget class="QTableWidget" name="OppChargingParametersTable">
       <property name="geometry">
        <rect>
         <x>280</x>
         <y>110</y>
         <width>371</width>
-        <height>281</height>
+        <height>291</height>
        </rect>
       </property>
       <property name="font">
@@ -802,7 +802,7 @@ gridline-color: rgb(0, 0, 0);</string>
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true"/>
+       <string notr="true">background-color: rgb(255, 255, 255)</string>
       </property>
       <row>
        <property name="text">
@@ -939,7 +939,7 @@ gridline-color: rgb(0, 0, 0);</string>
       </item>
       <item row="2" column="0">
        <property name="text">
-        <string>P8,P18,P1</string>
+        <string>S8,S18,S1</string>
        </property>
        <property name="font">
         <font>
@@ -1008,7 +1008,7 @@ gridline-color: rgb(0, 0, 0);</string>
      <attribute name="title">
       <string>Simulation</string>
      </attribute>
-     <widget class="QPushButton" name="OportunityLoadSimButton">
+     <widget class="QPushButton" name="OpportunityLoadSimButton">
       <property name="geometry">
        <rect>
         <x>340</x>
@@ -1035,7 +1035,7 @@ gridline-color: rgb(0, 0, 0);</string>
        <string>Load simulation</string>
       </property>
      </widget>
-     <widget class="QProgressBar" name="OportunityprogressBar">
+     <widget class="QProgressBar" name="OpportunityprogressBar">
       <property name="geometry">
        <rect>
         <x>380</x>
@@ -1071,22 +1071,22 @@ gridline-color: rgb(0, 0, 0);</string>
        <bool>false</bool>
       </property>
      </widget>
-     <widget class="QWidget" name="OportunityCurveWidget" native="true">
+     <widget class="QWidget" name="OpportunityCurveWidget" native="true">
       <property name="geometry">
        <rect>
         <x>20</x>
         <y>80</y>
         <width>901</width>
-        <height>351</height>
+        <height>311</height>
        </rect>
       </property>
      </widget>
      <widget class="QComboBox" name="ElementscomboBox">
       <property name="geometry">
        <rect>
-        <x>220</x>
-        <y>440</y>
-        <width>211</width>
+        <x>180</x>
+        <y>400</y>
+        <width>241</width>
         <height>31</height>
        </rect>
       </property>
@@ -1113,9 +1113,9 @@ gridline-color: rgb(0, 0, 0);</string>
      <widget class="QComboBox" name="VariablescomboBox">
       <property name="geometry">
        <rect>
-        <x>510</x>
-        <y>440</y>
-        <width>211</width>
+        <x>180</x>
+        <y>450</y>
+        <width>241</width>
         <height>31</height>
        </rect>
       </property>
@@ -1158,6 +1158,75 @@ gridline-color: rgb(0, 0, 0);</string>
         <string>Charger vector</string>
        </property>
       </item>
+     </widget>
+     <widget class="QPushButton" name="OpportunityGraphButton">
+      <property name="geometry">
+       <rect>
+        <x>600</x>
+        <y>420</y>
+        <width>121</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>MS Sans Serif</family>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="statusTip">
+       <string>Push to load the simulation</string>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(159, 159, 159);</string>
+      </property>
+      <property name="text">
+       <string>Graph</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="ElementLabel">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>410</y>
+        <width>101</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>MS Sans Serif</family>
+        <pointsize>12</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Element</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="VariableLabel">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>460</y>
+        <width>101</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>MS Sans Serif</family>
+        <pointsize>12</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Variable</string>
+      </property>
      </widget>
     </widget>
    </widget>
