--- a/UI/InterfaceOpportunity.ui
+++ b/UI/InterfaceOpportunity.ui
@@ -766,7 +766,7 @@ gridline-color: rgb(0, 0, 0);</string>
      <widget class="QLabel" name="ChargingParameterLabel">
       <property name="geometry">
        <rect>
-        <x>340</x>
+        <x>170</x>
         <y>40</y>
         <width>261</width>
         <height>31</height>
@@ -787,7 +787,7 @@ gridline-color: rgb(0, 0, 0);</string>
      <widget class="QTableWidget" name="OppChargingParametersTable">
       <property name="geometry">
        <rect>
-        <x>280</x>
+        <x>110</x>
         <y>110</y>
         <width>371</width>
         <height>291</height>
@@ -1002,6 +1002,80 @@ gridline-color: rgb(0, 0, 0);</string>
         </font>
        </property>
       </item>
+     </widget>
+     <widget class="QPushButton" name="RefreshSectionsButton">
+      <property name="geometry">
+       <rect>
+        <x>640</x>
+        <y>370</y>
+        <width>121</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>MS Sans Serif</family>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="statusTip">
+       <string>Push to go load charge sections</string>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(159, 159, 159);</string>
+      </property>
+      <property name="text">
+       <string>Load Charge
+Sections</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="ChargeSectionsLabel">
+      <property name="geometry">
+       <rect>
+        <x>620</x>
+        <y>40</y>
+        <width>171</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>MS Sans Serif</family>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>CL: Charge Sections</string>
+      </property>
+     </widget>
+     <widget class="QWidget" name="verticalLayoutWidget_2">
+      <property name="geometry">
+       <rect>
+        <x>580</x>
+        <y>80</y>
+        <width>241</width>
+        <height>271</height>
+       </rect>
+      </property>
+      <layout class="QVBoxLayout" name="StopslLayout">
+       <property name="sizeConstraint">
+        <enum>QLayout::SetDefaultConstraint</enum>
+       </property>
+       <item>
+        <widget class="QLabel" name="Fondo">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(255, 255, 255);</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </widget>
     <widget class="QWidget" name="OperationDiagramTab">
