--- a/UI/InterfaceOpportunity.ui
+++ b/UI/InterfaceOpportunity.ui
@@ -804,6 +804,33 @@ gridline-color: rgb(0, 0, 0);</string>
       <property name="styleSheet">
        <string notr="true">background-color: rgb(255, 255, 255)</string>
       </property>
+      <property name="frameShape">
+       <enum>QFrame::StyledPanel</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Sunken</enum>
+      </property>
+      <property name="verticalScrollBarPolicy">
+       <enum>Qt::ScrollBarAsNeeded</enum>
+      </property>
+      <property name="horizontalScrollBarPolicy">
+       <enum>Qt::ScrollBarAsNeeded</enum>
+      </property>
+      <property name="sizeAdjustPolicy">
+       <enum>QAbstractScrollArea::AdjustIgnored</enum>
+      </property>
+      <property name="verticalScrollMode">
+       <enum>QAbstractItemView::ScrollPerPixel</enum>
+      </property>
+      <property name="horizontalScrollMode">
+       <enum>QAbstractItemView::ScrollPerPixel</enum>
+      </property>
+      <attribute name="horizontalHeaderStretchLastSection">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="verticalHeaderStretchLastSection">
+       <bool>false</bool>
+      </attribute>
       <row>
        <property name="text">
         <string>BC [kwh]:Battery capacity per bus</string>
@@ -1006,7 +1033,7 @@ gridline-color: rgb(0, 0, 0);</string>
      <widget class="QPushButton" name="RefreshSectionsButton">
       <property name="geometry">
        <rect>
-        <x>640</x>
+        <x>550</x>
         <y>370</y>
         <width>121</width>
         <height>51</height>
@@ -1076,6 +1103,34 @@ Sections</string>
         </widget>
        </item>
       </layout>
+     </widget>
+     <widget class="QPushButton" name="SaveSectionsButton">
+      <property name="geometry">
+       <rect>
+        <x>730</x>
+        <y>370</y>
+        <width>121</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>MS Sans Serif</family>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="statusTip">
+       <string>Push to go load charge sections</string>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(159, 159, 159);</string>
+      </property>
+      <property name="text">
+       <string>Save Charge
+Sections</string>
+      </property>
      </widget>
     </widget>
     <widget class="QWidget" name="OperationDiagramTab">
